refactor: change auth process to work only with mobile devices
